Fix broken hash link (#503)

--- a/docs/platform/charts.mdx
+++ b/docs/platform/charts.mdx
@@ -232,9 +232,9 @@ $$
 
 If you're interested in seeing an _all-time_ comparison between multiple Cohorts
 or multiple Software Versions, use
-[Metric Charts by Software Version or Cohort](#metric-charts-by-software-version-or-cohort)
+[Metric Charts by Cohort or Software Version](#metric-charts-by-cohort-or-software-version)
 or
-[Issue Charts by Software Version or Cohort](#issue-charts-by-software-version-or-cohort)
+[Issue Charts by Cohort or Software Version](#issue-charts-by-cohort-or-software-version)
 instead.
 
 :::
