Add heartbeat & timestamp info to alerts docs (#511)
* Add heartbeat & timestamp info to alerts docs

* Clarify MCU vs Android/Linux timestamps

--- a/docs/mcu/metrics-api.mdx
+++ b/docs/mcu/metrics-api.mdx
@@ -152,7 +152,7 @@ void memfault_metrics_heartbeat_collect_data(void) {
 }
 ```
 
-## Initial Setup & Debug APIs
+## Initial Setup & Debug APIs {#initial-setup-and-debug-apis}
 
 While integrating the heartbeat metrics subsystem or adding new metrics, there
 are a few easy ways you can debug and test the new code. Notably:
