Missing footer link for project-managers (#512)

--- a/docs/ci/authentication.mdx
+++ b/docs/ci/authentication.mdx
@@ -137,3 +137,4 @@ memfault --project-key "$YOUR_PROJECT_KEY" ...
 </Tabs>
 
 [organization-admins]: /docs/platform/access-control-teams-roles#admin
+[project-managers]: /docs/platform/access-control-teams-roles#manager
