Update arm-infineon-modustoolbox-guide.mdx (#509)
* Update arm-infineon-modustoolbox-guide.mdx

Updated the title, description, sidebar, etc. labels to include "Infineon" before ModusToolbox or PSoC to help with SEO and search on the page.

* Prettified Code!

---------

Co-authored-by: collhar <collhar@users.noreply.github.com>
Co-authored-by: Tyler Hoffman <tyler@memfault.com>

--- a/docs/mcu/arm-infineon-modustoolbox-guide.mdx
+++ b/docs/mcu/arm-infineon-modustoolbox-guide.mdx
@@ -1,7 +1,7 @@
 ---
 id: arm-infineon-modustoolbox-guide
-title: ModusToolbox™ Getting Started Guide for PSoC™ 6
-sidebar_label: ModusToolbox™ SDK for PSoC™ 6
+title: Infineon ModusToolbox™ Getting Started Guide for PSoC™ 6
+sidebar_label: Infineon ModusToolbox™ SDK for PSoC™ 6
 ---
 
 import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
@@ -20,7 +20,7 @@ tested against the
 [`CY8CKIT-062S2-43012`](https://www.infineon.com/cms/en/product/evaluation-boards/cy8ckit-062s2-43012/)
 evaluation board.
 
-These instructions should also apply to any other PSoC™ 6 family board.
+These instructions should also apply to any other Infineon PSoC™ 6 family board.
 
 A full example project targeting the `CY8CKIT-062S2-43012` development board can
 be found at
@@ -29,8 +29,8 @@ be found at
 
 ## Overview
 
-This document describes how to integrate the Memfault SDK into a ModusToolbox™
-based project.
+This document describes how to integrate the Memfault SDK into a Infineon
+ModusToolbox™ based project.
 
 ### Prerequisite
 
