Update esp32-guide.mdx (#507)
Updated the title, description, sidebar label to include "Espressif" before ESP32 to help with SEO and search on the page.

Co-authored-by: Tyler Hoffman <tyler@memfault.com>

--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -1,8 +1,8 @@
 ---
 id: esp32-guide
-title: ESP32 ESP-IDF Integration Guide
-sidebar_label: ESP32 ESP-IDF
-description: Integrate Memfault on the ESP32 ESP-IDF platform.
+title: Espressif ESP32 ESP-IDF Integration Guide
+sidebar_label: Espressif ESP32 ESP-IDF
+description: Integrate Memfault on Espressif's ESP32 ESP-IDF platform.
 toc_max_heading_level: 4
 ---
 
@@ -11,7 +11,7 @@ import { EnableServerSideDeveloperMode } from "@site/src/components/EnableServer
 
 This tutorial will go over integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
-a system that is using the
+a system that is using Espressif's
 [ESP-IDF](https://docs.espressif.com/projects/esp-idf) for an ESP32 chip. It
 assumes you already have a working project/toolchain for the ESP32. If you do
 not, the
