Update nrf-connect-sdk-guide.mdx (#506)
* Update nrf-connect-sdk-guide.mdx

Updated the title, description, sidebar label to include "Nordic" or "Nordic Semiconductor" before nRF Connect SDK to help with SEO and search on the page.

* Prettified Code!

---------

Co-authored-by: collhar <collhar@users.noreply.github.com>

--- a/docs/mcu/nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nrf-connect-sdk-guide.mdx
@@ -1,8 +1,9 @@
 ---
 id: nrf-connect-sdk-guide
-title: nRF Connect SDK Integration Guide
-sidebar_label: nRF Connect SDK
-description: "Integrate Memfault using the nRF Connect SDK."
+title: Nordic nRF Connect SDK Integration Guide
+sidebar_label: Nordic nRF Connect SDK
+description:
+  "Integrate Memfault using the Nordic Semiconductor's nRF Connect SDK."
 toc_max_heading_level: 4
 ---
 
@@ -15,9 +16,10 @@ import TabItem from "@theme/TabItem";
 
 In this guide we will walk through the steps for integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
-a project using the nRF Connect SDK. The integration has been tested against the
-releases ranging from v1.4.0 up to v2.3.0. All versions of the nRF Connect SDK
-since v1.6.0 include Memfault when downloaded from Nordic's website.
+a project using Nordic Semiconductor's nRF Connect SDK. The integration has been
+tested against the releases ranging from v1.4.0 up to v2.3.0. All versions of
+the nRF Connect SDK since v1.6.0 include Memfault when downloaded from Nordic's
+website.
 
 This integration is written for the
 [nrf9160-DK](https://www.nordicsemi.com/Products/Development-hardware/nrf9160-dk),
