Update esp8266-rtos-sdk-guide.mdx (#508)
* Update esp8266-rtos-sdk-guide.mdx

Updated the title, description, sidebar label to include "Espressif" before ESP8266 to help with SEO and search on the page.

* Prettified Code!

---------

Co-authored-by: collhar <collhar@users.noreply.github.com>

--- a/docs/mcu/esp8266-rtos-sdk-guide.mdx
+++ b/docs/mcu/esp8266-rtos-sdk-guide.mdx
@@ -1,18 +1,18 @@
 ---
 id: esp8266-rtos-sdk-guide
-title: ESP8266 RTOS Integration Guide
-sidebar_label: ESP8266 RTOS SDK
-description: "Integrate Memfault for the ESP8266 RTOS SDK."
+title: Espressif ESP8266 RTOS Integration Guide
+sidebar_label: Espressif ESP8266 RTOS SDK
+description: "Integrate Memfault on Espressif's ESP8266 RTOS SDK."
 ---
 
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
 
 ## Overview
 
-In this guide we will walk through the steps for integrating the
+In this guide, we will walk through the steps for integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
-a project using the ESP8266 RTOS SDK. The integration has been tested against
-the
+a project using Espressif's ESP8266 RTOS SDK. The integration has been tested
+against the
 [v3.3 release](https://github.com/espressif/ESP8266_RTOS_SDK/tree/release/v3.3).
 
 Upon completion of the integration, the following subcomponents will be added to
