--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -108,6 +108,15 @@ Below is a list of the APIs and payloads that may be rate-limited:
         for MCU Projects.
       </td>
     </tr>
+    <tr id="chunks">
+      <td>Ingestion of Chunks</td>
+      <td>Device</td>
+      <td>MCU</td>
+      <td>
+        <Link to="/docs/mcu/data-from-firmware-to-the-cloud/">Chunks</Link> are
+        packets of data coming from the Memfault Firmware SDK.
+      </td>
+    </tr>
     <tr id="elf-coredumps">
       <td>Ingestion of ELF Coredumps</td>
       <td>Device</td>
