Add renames and redirects for esp32, esp8266, NCS (#515)
Follow up from #506, #507, #508, rename everything and add redirects for
external backlinks.

--- a/blog/2023-02-28.mdx
+++ b/blog/2023-02-28.mdx
@@ -5,8 +5,8 @@ title: February 2023
 ## Memfault Support for RISC-V on ESP32-C3 Devices
 
 Memfault now supports RISC-V on ESP32-C3 devices. By following the steps in the
-[ESP32 ESP-IDF](/docs/mcu/esp32-guide/) integration guide, you will be able to
-integrate the Memfault Firmware SDK into a system that is using the
+[ESP32 ESP-IDF](/docs/mcu/espressif-esp32-guide/) integration guide, you will be
+able to integrate the Memfault Firmware SDK into a system that is using the
 [ESP-IDF](https://docs.espressif.com/projects/esp-idf), including the ESP32-C3
 chip. The integration guide assumes you already have a working project/toolchain
 for the ESP32. If you do not, the
@@ -66,7 +66,8 @@ is a great resource.
   - Added: (Experimental) Support for “Out of Memory” reboot reason
   - Changed: The Kconfig `CONFIG_MEMFAULT_AUTOMATIC_INIT` has been deprecated
     and is no longer supported. Please see
-    [docs](/docs/mcu/esp32-guide#initializing-memfault) for more information.
+    [docs](/docs/mcu/espressif-esp32-guide#initializing-memfault) for more
+    information.
 
 ## Android
 
