--- a/docs/mcu/espressif-esp8266-rtos-sdk-guide.mdx
+++ b/docs/mcu/espressif-esp8266-rtos-sdk-guide.mdx
@@ -1,5 +1,5 @@
 ---
-id: esp8266-rtos-sdk-guide
+id: espressif-esp8266-rtos-sdk-guide
 title: Espressif ESP8266 RTOS Integration Guide
 sidebar_label: Espressif ESP8266 RTOS SDK
 description: "Integrate Memfault on Espressif's ESP8266 RTOS SDK."
