--- a/docs/mcu/nordic-nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nordic-nrf-connect-sdk-guide.mdx
@@ -1,5 +1,5 @@
 ---
-id: nrf-connect-sdk-guide
+id: nordic-nrf-connect-sdk-guide
 title: Nordic nRF Connect SDK Integration Guide
 sidebar_label: Nordic nRF Connect SDK
 description:
