--- a/docs/mcu/zephyr-guide.mdx
+++ b/docs/mcu/zephyr-guide.mdx
@@ -16,8 +16,9 @@ a system that is using [Zephyr RTOS](https://www.zephyrproject.org/).
 :::tip
 
 If you are using a Nordic Semiconductor chip and the nRF Connect SDK, take a
-look at the [nRF Connect SDK Integration Guide](/docs/mcu/nrf-connect-sdk-guide)
-for details specific to that setup!
+look at the
+[nRF Connect SDK Integration Guide](/docs/mcu/nordic-nrf-connect-sdk-guide) for
+details specific to that setup!
 
 :::
 
