--- a/docs/mcu/espressif-esp32-guide.mdx
+++ b/docs/mcu/espressif-esp32-guide.mdx
@@ -1,5 +1,5 @@
 ---
-id: esp32-guide
+id: espressif-esp32-guide
 title: Espressif ESP32 ESP-IDF Integration Guide
 sidebar_label: Espressif ESP32 ESP-IDF
 description: Integrate Memfault on Espressif's ESP32 ESP-IDF platform.
