--- a/src/pages/_partials/_integration-guide-table.mdx
+++ b/src/pages/_partials/_integration-guide-table.mdx
@@ -1,14 +1,14 @@
 <center>
 
-| MCU Architecture                  |                           Getting Started Guide                            |
-| --------------------------------- | :------------------------------------------------------------------------: |
-| ARM Cortex-M                      |       [ARM Cortex-M Integration Guide](/docs/mcu/arm-cortex-m-guide)       |
-| nRF Connect SDK                   |    [nRF Connect SDK Integration Guide](/docs/mcu/nrf-connect-sdk-guide)    |
-| ESP32 ESP-IDF (Xtensa and RISC-V) |          [ESP32 ESP-IDF Integration Guide](/docs/mcu/esp32-guide)          |
-| ESP8266                           |     [ESP8266 RTOS Integration Guide](/docs/mcu/esp8266-rtos-sdk-guide)     |
-| Dialog DA1469x                    |          [DA1469x Integration Guide](/docs/mcu/da1469x-sdk-guide)          |
-| NXP MCUXpresso RT1060             | [NXP MCUXpresso SDK for i.MX RT Guide](/docs/mcu/arm-nxp-mcuxpresso-guide) |
-| Zephyr RTOS                       |             [Zephyr Integration Guide](/docs/mcu/zephyr-guide)             |
-| ARM Cortex-R                      |       [ARM Cortex-R Integration Guide](/docs/mcu/arm-cortex-r-guide)       |
+| MCU Architecture                  |                            Getting Started Guide                             |
+| --------------------------------- | :--------------------------------------------------------------------------: |
+| ARM Cortex-M                      |        [ARM Cortex-M Integration Guide](/docs/mcu/arm-cortex-m-guide)        |
+| nRF Connect SDK                   | [nRF Connect SDK Integration Guide](/docs/mcu/nordic-nrf-connect-sdk-guide)  |
+| ESP32 ESP-IDF (Xtensa and RISC-V) |      [ESP32 ESP-IDF Integration Guide](/docs/mcu/espressif-esp32-guide)      |
+| ESP8266                           | [ESP8266 RTOS Integration Guide](/docs/mcu/espressif-esp8266-rtos-sdk-guide) |
+| Dialog DA1469x                    |           [DA1469x Integration Guide](/docs/mcu/da1469x-sdk-guide)           |
+| NXP MCUXpresso RT1060             |  [NXP MCUXpresso SDK for i.MX RT Guide](/docs/mcu/arm-nxp-mcuxpresso-guide)  |
+| Zephyr RTOS                       |              [Zephyr Integration Guide](/docs/mcu/zephyr-guide)              |
+| ARM Cortex-R                      |        [ARM Cortex-R Integration Guide](/docs/mcu/arm-cortex-r-guide)        |
 
 </center>
