Add redirects for embed links (#518)
Fix fallout from #515

--- a/docs/mcu/arm-infineon-modustoolbox-guide.mdx
+++ b/docs/mcu/arm-infineon-modustoolbox-guide.mdx
@@ -20,7 +20,8 @@ tested against the
 [`CY8CKIT-062S2-43012`](https://www.infineon.com/cms/en/product/evaluation-boards/cy8ckit-062s2-43012/)
 evaluation board.
 
-These instructions should also apply to any other Infineon PSoC™ 6 family board.
+These instructions should also apply to any other Infineon PSoC™ 6 family
+board.
 
 A full example project targeting the `CY8CKIT-062S2-43012` development board can
 be found at
@@ -66,10 +67,10 @@ Infineon's website
 
 ### Add the Memfault Sources and Build Flags
 
-1. The Memfault SDK is implemented as a ModusToolbox™ middleware library and can
-   be imported using the "library-manager". To launch the library manager for
-   your project, either type `make modlibs` from the command line or click on
-   "Library Manager" under the tools tab in the IDE. From there, search for
+1. The Memfault SDK is implemented as a ModusToolbox™ middleware library and
+   can be imported using the "library-manager". To launch the library manager
+   for your project, either type `make modlibs` from the command line or click
+   on "Library Manager" under the tools tab in the IDE. From there, search for
    "Memfault Firmware SDK" and click "Update"
 
    ![](/img/docs/mcu/arm-mtb-library-manager.png)
